@@ -2,6 +2,7 @@ V5.6.2
 * Fixed ticket 391 (https://github.com/Rocologo/MobHunting/issues/391)
 * Removed runTaskLaterAsynchronously from MasterMobHunter
 * Add missing commands in /mh database (https://github.com/Rocologo/MobHunting/issues/391) 
+* Fixed Ticket 389 - ConcurrentModificationException (https://github.com/Rocologo/MobHunting/issues/389)
 V5.6.1
 * Fixed BagOfGold duplication reported and tested by Instantout. Thanks! 
 * Added new commands "/mh database reset-achievements" to delete all achievements data from database.
